# lmao

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: ci.yml  lgx-release.yml
crates/lmao-ffi/: Cargo.toml
crates/lmao-ffi/src/: lib.rs
crates/logos-messaging-a2a-cli/: Cargo.toml
crates/logos-messaging-a2a-cli/src/: agent.rs  cli.rs  common.rs  completion.rs  config.rs  health.rs  info.rs  main.rs  metrics.rs  presence.rs  session.rs  skill.rs  task.rs
crates/logos-messaging-a2a-core/: Cargo.toml
crates/logos-messaging-a2a-core/benches/: serialization.rs
crates/logos-messaging-a2a-core/src/: agent.rs  delegation.rs  envelope.rs  lib.rs  presence.rs  registry.rs  retry.rs  task.rs  topics.rs
crates/logos-messaging-a2a-crypto/: Cargo.toml
crates/logos-messaging-a2a-crypto/benches/: crypto.rs
crates/logos-messaging-a2a-crypto/src/: lib.rs
crates/logos-messaging-a2a-crypto/tests/: proptest_crypto.rs
crates/logos-messaging-a2a-execution/: Cargo.toml
crates/logos-messaging-a2a-execution/src/: lez.rs  lib.rs  status_network.rs
crates/logos-messaging-a2a-execution/tests/: status_network_integration.rs
crates/logos-messaging-a2a-ffi/: Cargo.toml
crates/logos-messaging-a2a-ffi/src/: lib.rs
crates/logos-messaging-a2a-http/: Cargo.toml
crates/logos-messaging-a2a-http/src/: main.rs  payment.rs
crates/logos-messaging-a2a-mcp/: Cargo.toml  README.md
crates/logos-messaging-a2a-mcp/src/: config.rs  lib.rs  main.rs  server.rs  state.rs
crates/logos-messaging-a2a-mcp/tests/: integration.rs
crates/logos-messaging-a2a-node/: Cargo.toml
crates/logos-messaging-a2a-node/src/: delegation.rs  discovery.rs  lib.rs  metrics.rs  payment.rs  presence.rs  retry.rs  session.rs  storage.rs  streaming.rs  tasks.rs
crates/logos-messaging-a2a-node/src/tasks/: helpers.rs  mod.rs  payment.rs  poll.rs  respond.rs  send.rs  test_support.rs
crates/logos-messaging-a2a-node/tests/: delegation.rs  encrypted_sessions.rs  full_lifecycle.rs  integration.rs  ping_pong.rs  presence.rs  retry.rs
crates/logos-messaging-a2a-storage/: Cargo.toml
crates/logos-messaging-a2a-storage/src/: lib.rs  libstorage_backend.rs  logos_core.rs  logos_core_backend.rs
crates/logos-messaging-a2a-storage/tests/: codex_integration.rs  rest_integration.rs
crates/logos-messaging-a2a-transport/: Cargo.toml  build.rs
crates/logos-messaging-a2a-transport/src/: lib.rs  logos_core.rs  logos_core_transport.rs  logos_messaging.rs  memory.rs  nwaku_rest.rs  sds.rs  waku_bindings_transport.rs
crates/logos-messaging-a2a-transport/src/sds/: bloom.rs  channel.rs  message.rs  mod.rs
crates/logos-messaging-a2a-transport/stubs/: rln_stubs.c
crates/logos-messaging-a2a-transport/tests/: native_waku_e2e.rs  nwaku_rest_integration.rs
crates/waku-a2a-cli/: Cargo.toml
crates/waku-a2a-cli/src/: main.rs
crates/waku-a2a-core/src/: lib.rs
crates/waku-a2a-ffi/src/: lib.rs
crates/waku-a2a-mcp/: Cargo.toml  README.md
crates/waku-a2a-mcp/src/: main.rs
crates/waku-a2a-node/: Cargo.toml
crates/waku-a2a-node/src/: lib.rs
crates/waku-a2a-node/tests/: ping_pong.rs
crates/waku-a2a-transport/tests/: e2e.rs
demos/logos-core-e2e/: Cargo.toml  build.rs
demos/logos-core-e2e/src/: main.rs
demos/logos-core-e2e/stub/: logos_core_stub.c
docs/: architecture.md  issues.md
examples/: README.md  echo_agent.rs  ping_pong.rs  presence_discovery.rs  task_delegation.rs  two_agents.rs
logos-core-module/: CMakeLists.txt  flake.nix  metadata.json  module.yaml  result
logos-core-module/qml/: AgentCard.qml  LmaoView.qml  Theme.qml  qml.qrc
logos-core-module/src/: AgentListModel.cpp  AgentListModel.h  LmaoBackend.cpp  LmaoBackend.h  LmaoComponent.cpp  LmaoComponent.h  lmao_ffi.h
logos-core-module/tests/: CMakeLists.txt  test_module.cpp
module/: CMakeLists.txt  README.md  metadata.json  preview.html
nix/: default.nix  lib.nix
scripts/: package-lgx.sh  start-codex.sh
src/: lib.rs
