[package]
name = "logos-messaging-a2a-core"
version = "0.1.0"
edition = "2021"

[dependencies]
logos-messaging-a2a-crypto = { path = "../logos-messaging-a2a-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
k256 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "serialization"
harness = false
