[package]
name = "logos-messaging-a2a-execution"
version = "0.1.0"
edition = "2021"
description = "ExecutionBackend trait and implementations (Status Network, LEZ) for LMAO agent on-chain operations"

[features]
default = ["status-network"]
status-network = ["dep:alloy-primitives", "dep:alloy-sol-types"]
lez = []

[dependencies]
logos-messaging-a2a-core = { path = "../logos-messaging-a2a-core" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
log = "0.4"

# Status Network (alloy) — optional
alloy-primitives = { version = "0.8", optional = true }
alloy-sol-types = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json = { workspace = true }
