[package]
name = "logos-messaging-a2a-http"
version = "0.1.0"
edition = "2021"
description = "A2A-spec HTTP/JSON-RPC server for Logos Messaging agents"

[[bin]]
name = "logos-messaging-a2a-http"
path = "src/main.rs"

[dependencies]
logos-messaging-a2a-core = { path = "../logos-messaging-a2a-core" }
logos-messaging-a2a-node = { path = "../logos-messaging-a2a-node" }
logos-messaging-a2a-transport = { path = "../logos-messaging-a2a-transport" }
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
axum-test = "16"
