[package]
name = "logos-messaging-a2a-transport"
version = "0.1.0"
edition = "2021"

[features]
# Enable native libwaku FFI transport (requires Nim toolchain + libwaku).
# Resolves Issue #18: rln 0.3.4 pinned once_cell=1.17.1 + serde=1.0.163 — fixed
# by using a local fork (~/waku-bindings-fork) with rln removed from deps.
native = ["waku-bindings"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

# Native waku FFI bindings (Issue #18) — optional, needs libwaku + Nim
waku-bindings = { path = "../../../waku-bindings-fork/waku-bindings", optional = true }
