[package]
name = "logos-messaging-a2a-transport"
version = "0.1.0"
edition = "2021"

[features]
default = ["rest"]
rest = ["reqwest"]
logos-core = ["base64"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { version = "0.22", optional = true }
