[package]
name = "logos-core-e2e-demo"
version = "0.1.0"
edition = "2021"
publish = false

# This crate is excluded from the workspace to avoid feature unification
# (the logos-core feature requires liblogos_core.so at link time).

[dependencies]
logos-messaging-a2a-transport = { path = "../../crates/logos-messaging-a2a-transport", default-features = false, features = ["logos-core"] }
logos-messaging-a2a-storage = { path = "../../crates/logos-messaging-a2a-storage", default-features = false, features = ["logos-core"] }
waku-a2a-core = { path = "../../crates/waku-a2a-core" }
waku-a2a-node = { path = "../../crates/waku-a2a-node" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
